<resources>
    <string name="app_name">MyBaseAndroidStudy</string>
    <string name="action_settings">Settings</string>
    <string name="sticky_like">类粘性头部效果</string>
    <string name="click_event">点击事件</string>
    <string name="thread_study">线程学习</string>
    <string name="service_study_string">服务学习</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">结束服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="lock_study_string">Java 锁学习</string>
    <string name="bit_study_string">bitmap</string>
    <string name="exception_study_string">异常</string>
    <string name="proxy_study_string">代理</string>
    <string name="listview_string">列表</string>
    <string name="click_text2">click_text_2</string>
    <string name="click_text1">click_text_1</string>
</resources>
